Update README, also test out a webhook

--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MandyIGuess' Website</title>
-		<meta content="MandyIGuess' Website | Home" property="og:title" />
-		<meta content="A homepage, if you don't like colors, sorry but you won't want to go here." property="og:description" />
+		<title>Mandy's Website</title>
+		<meta content="Mandy's Website | Home" property="og:title" />
+		<meta content="Mandy's website, here you can find all kinds of fun stuff, like poorly coded HTML!" property="og:description" />
 		<meta content="https://mandyiguess.github.io" property="og:url" />
 		<meta content="#fc0384" data-react-helmet="true" name="theme-color" />
+		<link rel="stylesheet" href="../MandyIGuess.github.io/css/main.css"> <!--this is for local testing, since i'm an idiot and have an extra unnecessary folder on my computer-->
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
-		<div class="titleAndGrammarReassurance">
-			<h1>MandyIGuess' Website</h1>
-			<p>(that grammar is correct, so don't say it isn't)</p>
+		<div class="titlebar">
+			<div class="titlebarText"><h1>Mandy's Website</h1></div>
+			<div class="titlebarNav">
+				<b><p class="titlebarNavBlog"><a class="titlebarLinks" href="../blog/index.html">Blog</a></p>&nbsp&nbsp | &nbsp&nbsp<p class="titlebarNavLinkTwo">Next Page</p></b> <!--a href="../blog/otherpages/page2.html">Next Page</a>-->
+			</div>
 		</div>
-		<br>
-		<br>
+		<!--
 		<div class="newStuffSection">
 			<h1><b>BRAND NEW!</b></h1>
 			<p>A blog section has launched! Check it out <a href="../blog/index.html"><b>here</b></a>!</p>
 		</div>
-		<br>
-		<br>
+		-->
+		<div class="aboutMe"></div>
+			
 		<div class="aboutMe">
 			<h1>About Me</h1>
-			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days (also occasionally 6-7AM; 11AM), and from 11AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
+			<p>Hi, I'm a person who goes by several different nicknames! For simplicity, you can just call me Mandy.<br>I'm a 14yrs old male living in the USA! My gender pronouns are He/Him or She/Her.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 7AM to 11PM (though I may be busy during weekdays, of course)!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
 		</div>
 		<br>
 		<br>
