spooky adventure page update, nothing much

--- a/spooky/index.html
+++ b/spooky/index.html
@@ -11,10 +11,11 @@
 	</head>
 	<body>
     	<div class="titlebar">Super Mario Spooky Adventure</div>
-		<div class="spookyIsDead">
+		<h1 style="font-family: seurat-pro; text-align: center;">Under Construction, come back later!!!</h1>
+		<!--<div class="spookyIsDead">
 			<h1>Development File Downloads</h1>
 			<p>Super Mario Spooky Adventure has been cancelled for reasons that won't be explained here.</p>
-            <!-- <small style="position:relative;top:-35px;">Click here to read my blog post explaining why!</small> -->
+            <small style="position:relative;top:-35px;">Click here to read my blog post explaining why!</small>
             <br>
             
             <h2 style="position:relative;top:-90px;">Development Resources</h2>
@@ -34,7 +35,7 @@
 			<a style="position:relative;top:-200px;" href="https://mega.nz/file/HnZh2KbD#BAgxvyWwQWvi4EaMcpS45vflQsfjlfrZes5Zc7Fvit4"><b>Download Riivolution Patch</b></a>
             <br>
             <small style="position:relative;top:-205px;">Download Size: 455MB; 573MB (unpacked)</small>
-		</div>
+		</div>-->
 		<div class="footer">
 			<b>(c)</b> 2022/2023 - MandyIGuess & the Spooky Adventure Development Team<br>
             <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO.<br>
