--- a/the_eel/index.html
+++ b/the_eel/index.html
@@ -1,8 +1,12 @@
 <html>
 	<head>
 		<title>The Eel.</title>
+		<meta content="The Eel." property="og:title" />
+		<meta content="The Eel." property="og:description" />
+		<meta content="https://mandyiguess.github.io/the_eel" property="og:url" />
+		<meta content="#cf576d" data-react-helmet="true" name="theme-color" />
 		<!-- Load CSS -->
-		<link href="main.css">
+		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
 		<h1>The Eel.</h1>
