--- a/the_eel/index.html
+++ b/the_eel/index.html
@@ -6,7 +6,7 @@
 		<meta content="https://mandyiguess.github.io/the_eel" property="og:url" />
 		<meta content="#cf576d" data-react-helmet="true" name="theme-color" />
 		<!-- Load CSS -->
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="./the_eel/main.css">
 	</head>
 	<body>
 		<h1>The Eel.</h1>
