Add note about site being outdated, also fix BG
- The background color is less hideous now.
- Removed some commented out stuff from the Spooky Adventure page.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta content="Mandy's website, here you can find all kinds of fun stuff, like poorly coded HTML!" property="og:description" />
 		<meta content="https://mandyiguess.github.io" property="og:url" />
 		<meta content="#fc0384" data-react-helmet="true" name="theme-color" />
-		<link rel="stylesheet" href="../MandyIGuess.github.io/css/main.css"> <!--this is for local testing, since i'm an idiot and have an extra unnecessary folder on my computer-->
-		<link rel="stylesheet" href="../css/main.css">
+		<link rel="stylesheet" href="./css/main.css">
 	</head>
 	<body>
 		<div class="titlebar">
@@ -22,7 +21,15 @@
 			<p>A blog section has launched! Check it out <a href="../blog/index.html"><b>here</b></a>!</p>
 		</div>
 		-->
-		<div class="aboutMe"></div>
+		<div class="aboutMe">
+			<h1>You should absolutely read this...</h1>
+			<p>
+				This part of the website hasn't been touched since 2023 (as well as a lot of other parts).
+				And the about me hasn't been edited in a very long time either! Info here is outdated, so that's just a heads up.
+				<br><br>
+				Expect it to hopefully get updated someday, whenever I remember to get around to it...
+			</p>
+		</div>
 			
 		<div class="aboutMe">
 			<h1>About Me</h1>
